Fix overlap class

--- a/src/components/LeafletMarker/LeafletMarker.css
+++ b/src/components/LeafletMarker/LeafletMarker.css
@@ -14,7 +14,7 @@
   filter: grayscale(1);
 }
 
-.overlap-marker {
+.overlap-marker  img{
   width: 30px;
 }
 
